--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,7 +9,15 @@
     </head>
     <body>  
         <div class="container">
-            <h1>Globo Feed</h1>
+            <div class="top">
+                <h1>Globo</h1>
+            </div>
+            <hr>
+            <div class="content">
+                <div class="content-box">
+                    <h1>Notícia</h1>
+                </div>
+            </div>
         </div>
     </body>
 </html>
